--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/canvas-confetti": "^1.9.0",
     "bcryptjs": "^3.0.3",
     "canvas-confetti": "^1.9.4",
+    "framer-motion": "^12.28.1",
     "jspdf": "^2.5.2",
     "lucide-react": "^0.562.0",
     "next": "16.1.3",
@@ -30,6 +31,10 @@
     "eslint-config-next": "16.1.3",
     "prisma": "^6.19.1",
     "tailwindcss": "^4.0.0",
+    "tsx": "^4.21.0",
     "typescript": "^5.0.0"
+  },
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
   }
 }
