--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/canvas-confetti": "^1.9.0",
     "bcryptjs": "^3.0.3",
     "canvas-confetti": "^1.9.4",
+    "data-fns": "^1.1.0",
     "framer-motion": "^12.28.1",
     "jspdf": "^2.5.2",
     "lucide-react": "^0.562.0",
