--- a/package.json
+++ b/package.json
@@ -9,7 +9,13 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@blocknote/core": "^0.46.1",
+    "@blocknote/mantine": "^0.46.1",
+    "@blocknote/react": "^0.46.1",
     "@google/generative-ai": "^0.24.1",
+    "@mantine/core": "^8.3.13",
+    "@mantine/hooks": "^8.3.13",
+    "@mediapipe/tasks-vision": "^0.10.32",
     "@prisma/client": "^6.19.1",
     "@types/bcryptjs": "^2.4.6",
     "@types/canvas-confetti": "^1.9.0",
@@ -21,7 +27,9 @@
     "lucide-react": "^0.562.0",
     "next": "16.1.3",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "react-webcam": "^7.2.0",
+    "viem": "^2.44.4"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.0.0",
